version_arm/config_file_arm/livefox/livefox-clientui.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: livefox
  name: clientui-client
  labels:
    app: clientui-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientui-client
  template:
    metadata:
      labels:
        app: clientui-client
    spec:
      containers:
        - name: clientui-client
          image: livefox/clientui-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox/video
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: livefox
  name: clientui-client
  labels:
    app: clientui-client
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: clientui-client
---
