version_arm/config_file_arm/livefox/livefox-mplayer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: livefox
  name: mplayer-client
  labels:
    app: mplayer-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mplayer-client
  template:
    metadata:
      labels:
        app: mplayer-client
    spec:
      containers:
        - name: mplayer-client
          image: livefox/mplayer-client:arm
          imagePullPolicy: Always
          ports:
            - containerPort: 9003
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox/video
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: livefox
  name: mplayer-client
  labels:
    app: mplayer-client
spec:
  ports:
    - port: 9003
      protocol: TCP
  selector:
    app: mplayer-client
---
