version_arm/config_file_arm/livefox/livefox-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: livefox
  name: ingress-livefox
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: clientui-client
          servicePort: 8080
      - path: /upload
        backend:
          serviceName: mupload-client
          servicePort: 9002
      - path: /stream
        backend:
          serviceName: mplayer-client
          servicePort: 9003
---
